added the schedule.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -46,7 +46,7 @@
         </div>
       </div>
     </div>
-    <div class="day-menu">
+    <div class="tasks-box">
       <div class="task-card template">
         <div class="__complete-btn"><span class="__icon">✓ </span><br> <span class="__label">Check Task</span> </div>
         <div class="__remove-btn"><span class="__icon">✗ </span><br> <span class="__label">Delete Task</span> </div>
@@ -77,7 +77,7 @@
         <div class="__timer">None.</div>
       </div>
     </div>
-    <div class="__schedule">
+    <div class="schedule border-grey-1">
       <div class="__hour-spans">
         <div class="__4-hours"></div>
         <div class="__4-hours"></div>
@@ -89,7 +89,6 @@
       <div class="__tasks-spans-box">
     
       </div>
-    </div>
     </div>
   </body>
   <!-- <script>
