added main structure of the task card.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -46,13 +46,15 @@
         </div>
       </div>
     </div>
-    <div class="tasks-box">
-      <div class="task-card template">
-        <div class="__complete-btn"><span class="__icon">✓ </span><br> <span class="__label">Check Task</span> </div>
-        <div class="__remove-btn"><span class="__icon">✗ </span><br> <span class="__label">Delete Task</span> </div>
-        <div class="__main">
-          <div class="__title">[TITLE]</div>
-          <div class="__start-time">[START-TIME]</div>
+    <div class="tasks-box hz-align-flex red">
+      <div class="task-card template rel transi-03 z-10">
+        <div class="__side-button-box h-100">
+          <div class="__complete-btn __side-button z-5 vt-align-flex hz-align-flex border-grey-05 pointer">✓</div>
+          <div class="__remove-btn __side-button z-5 vt-align-flex hz-align-flex border-grey-05 pointer">✕</div>
+        </div>
+        <div class="__main border-grey-05">
+          <div class="__title">Template Task</div>
+          <div class="__start-time">None</div>
           <div class="__more-button">✖</div>
         </div>
       </div>
@@ -63,7 +65,7 @@
         </div>
         <div class="__edit-btn">✎</div>
         <h3>Description: </h3>
-        <p class="__description">[DESC]
+        <p class="__description">This is only a template task, if you see this then there is a problem with the application.
         </p>
         <h3>Start: </h3>
         <span class="__start-time">[START-TIME]</span>
