added the styling to labels, progress bars and container to time input.

--- a/newTaskWindow.html
+++ b/newTaskWindow.html
@@ -8,7 +8,7 @@
         <div class="__title fs-25">Add a new Task</div>
         <div class="__close-btn abs fs-3">✕</div>
     </div>
-    <div class="main-container">
+    <div class="main-container abs">
         <div class="__title-container col-1-of-1">
             <h3>Event Title : </h3>
             <input class="__title" placeholder="Title"></input>
@@ -47,19 +47,18 @@
             </select>
         </div>
     </div>
-    <div class="time-input">
-        <div class="__hours-input">
-            <div class="__hours-bar"></div>
-            <div class="__plus"></div>
-            <div class="__minus"></div>
-            <div class="__label"></div>
+    <div class="time-input hz-align-margins">
+        <div class="__hours-input vt-align-flex hz-align-flex">
+            <div class="__hours-bar abs z-5"></div>
+            <div class="__plus abs"></div>
+            <div class="__minus abs"></div>
+            <input class="__label hz-align-text z-10" type="number"></input>
         </div>
-        <div class="__minutes-input">
-            <div class="__hours-bar"></div>
-            <div class="__plus"></div>
-            <div class="__minus"></div>
-            <div class="__label"></div>
-
+        <div class="__minutes-input vt-align-flex hz-align-flex">
+            <div class="__minutes-bar z-5 abs"></div>
+            <div class="__plus abs"></div>
+            <div class="__minus abs"></div>
+            <input class="__label hz-align-text z-10" type="number"></input>
         </div>
     </div>
 </body>
