--- a/newTaskWindow.html
+++ b/newTaskWindow.html
@@ -47,19 +47,34 @@
             </select>
         </div>
     </div>
-    <div class="time-input hz-align-margins">
-        <div class="__hours-input vt-align-flex hz-align-flex">
-            <div class="__hours-bar abs z-5"></div>
-            <div class="__plus abs"></div>
-            <div class="__minus abs"></div>
-            <input class="__label hz-align-text z-10" type="number"></input>
-        </div>
-        <div class="__minutes-input vt-align-flex hz-align-flex">
-            <div class="__minutes-bar z-5 abs"></div>
-            <div class="__plus abs"></div>
-            <div class="__minus abs"></div>
-            <input class="__label hz-align-text z-10" type="number"></input>
+    <div class="time-input-container rel">
+        <div class="time-input hz-align-margins">
+            <div class="__hours-input vt-align-flex hz-align-flex">
+                <div class="__hours-bar bar abs z-5"></div>
+                <div class="__plus hours abs border-grey-05 hz-align-flex vt-align-flex">+</div>
+                <div class="__minus hours abs border-grey-05 hz-align-flex vt-align-flex">-</div>
+                <input class="__label hz-align-text z-10" id="hours-input" type="number"></input>
+            </div>
+            <div class="__colon vt-align-margins fs-2">:</div>
+            <div class="__minutes-input vt-align-flex hz-align-flex">
+                <div class="__minutes-bar bar z-5 abs"></div>
+                <div class="__plus mins abs border-grey-05 hz-align-flex vt-align-flex">+</div>
+                <div class="__minus mins abs border-grey-05 hz-align-flex vt-align-flex">-</div>
+                <input class="__label hz-align-text z-10" id="minutes-input" type="number"></input>
+            </div>
         </div>
     </div>
+    <script>
+    if (typeof module === 'object') {
+        window.module = module; 
+        module = undefined;
+    }
+    </script>
+    <script type="text/javascript", src="node_modules/jquery/dist/jquery.min.js"></script>
+    <script type="text/javascript", src="newTaskWindow.js"></script>
+    <script>
+    if (window.module) 
+        module = window.module;
+    </script>
 </body>
 </html>
