--- a/newTaskWindow.html
+++ b/newTaskWindow.html
@@ -6,7 +6,7 @@
 <body>
     <div class="header vt-align-flex">
         <div class="__title fs-25">Add a new Task</div>
-        <div class="__close-btn abs fs-3">✕</div>
+        <div class="__close-btn abs fs-3 pointer">✕</div>
     </div>
     <div class="main-container abs">
         <div class="__title-container col-1-of-1">
