added event listener to change add Task window title.

--- a/newTaskWindow.html
+++ b/newTaskWindow.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <div class="header vt-align-flex">
-        <div class="__title fs-25">Add a new Task</div>
+        <div class="__title fs-25">Title</div>
         <div class="__close-btn abs fs-3 pointer">✕</div>
     </div>
     <div class="main-container abs">
