added the schedule spans.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -77,8 +77,8 @@
           </div>
         </div>
     </div>
-    <div class="schedule border-grey-1">
-      <div class="__hour-spans">
+    <div class="schedule border-grey-1 rel">
+      <div class="__hour-spans abs">
         <div class="__4-hours"></div>
         <div class="__4-hours"></div>
         <div class="__4-hours"></div>
@@ -86,7 +86,7 @@
         <div class="__4-hours"></div>
         <div class="__4-hours"></div>
       </div>
-      <div class="__tasks-spans-box">
+      <div class="__tasks-spans-box abs hz-align-flex">
     
       </div>
     </div>
