made new-task option semi-fonctional : not added in json yet.

--- a/newTaskWindow.html
+++ b/newTaskWindow.html
@@ -45,7 +45,7 @@
                 <option>One day before</option>
             </select>
         </div>   
-        <div class="__confirm-btn abs hz-align-margins vt-align-flex hz-align-flex border-grey-05">Confirm</div>
+        <div class="__confirm-btn abs hz-align-margins vt-align-flex hz-align-flex border-grey-05 pointer">Confirm</div>
     </div>
     <div class="time-input-container rel">
         <div class="time-input hz-align-margins">
