fixed bugs and improved some elements' styling.

--- a/newTaskWindow.html
+++ b/newTaskWindow.html
@@ -11,7 +11,7 @@
     <div class="main-container abs">
         <div class="__title-container col-1-of-1">
             <h3>Event Title : </h3>
-            <input class="__title" placeholder="Title"></input>
+            <input class="__title" placeholder="Title" maxlength="70"></input>
         </div>
         <div class="__desc-container col-1-of-1">
             <h3>Event Description : </h3>
