added check and fixed edit, remade structure for removing, adding, and editing tasks, added important-mark.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -22,7 +22,7 @@
       </div>
       <div class="__calendar-btn border-grey-05 vt-align-flex hz-align-flex hz-align-margins fs-25 pointer">Calendar</div>
       <div class="__completed-tasks pointer">
-        <div class="__check-box checked"></div>
+        <div class="__check-box"></div>
         <div class="__label">See completed tasks</div>
       </div>
       <div class="__important-tasks pointer">
@@ -53,9 +53,11 @@
           <div class="__remove-btn __side-button vt-align-flex hz-align-flex border-grey-05 pointer transi-03">✕</div>
         </div>
         <div class="__main border-grey-05 rel">
+          <div class="__uncheck-btn abs pointer"></div>
           <div class="__title abs w-100 vt-align-flex transi-03">Template Task</div>
           <div class="__start-time abs fs-2 transi-03">None</div>
           <div class="__more-button abs br-50 vt-align-flex hz-align-flex pointer transi-03">✕</div>
+          <div class="__important-mark abs border-grey-05 br-50"></div>
         </div>
       </div>
       <div class="task-page border-grey-05 red hz-align-margins rel z-5 template">
