added some styling to navigation bar buttons.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -17,10 +17,10 @@
         <div class="__day-name">Monday</div>
         <div class="__day-date">08/07</div>
       </div>
-      <div class="__add-task-btn border-grey-05 br-50 hz-align-margins pointer">
-        <div class="__icon vt-align-flex hz-align-flex">+</div>
+      <div class="__add-task-btn border-grey-05 br-50 hz-align-margins pointer transi-03">
+        <div class="__icon vt-align-flex hz-align-flex transi-03">+</div>
       </div>
-      <div class="__calendar-btn border-grey-05 vt-align-flex hz-align-flex hz-align-margins fs-25 pointer">Calendar</div>
+      <div class="__calendar-btn border-grey-05 vt-align-flex hz-align-flex hz-align-margins fs-25 pointer transi-03">Calendar</div>
       <div class="__completed-tasks pointer">
         <div class="__check-box"></div>
         <div class="__label">See completed tasks</div>
