--- a/newTaskWindow.html
+++ b/newTaskWindow.html
@@ -19,15 +19,15 @@
         </div>
         <div class="__start-container col-1-of-2 hz-align-text">
             <h3>Start Time : </h3>
-            <button class="__start-time __time-btn border-grey-05">N/A</button>
+            <button class="__start-time __time-btn border-grey-05 pointer">N/A</button>
         </div>
         <div class="__end-container col-1-of-2 hz-align-text">
             <h3>End Time : </h3>
-            <button class="__end-time __time-btn border-grey-05">N/A</button>
+            <button class="__end-time __time-btn border-grey-05 pointer">N/A</button>
         </div>
         <div class="__repeat-container col-1-of-2 hz-align-text">
             <h3>Repeat : </h3>
-            <select class="__repeat listbox" id="repeat">
+            <select class="__repeat listbox pointer" id="repeat">
                 <option>No Repeat</option>
                 <option>Daily</option>
                 <option>Weekly</option>
@@ -37,7 +37,7 @@
         </div>
         <div class="__notify-container col-1-of-2 hz-align-text">
             <h3>Notification : </h3>
-            <select class="__notification listbox" id="notification">
+            <select class="__notification listbox pointer" id="notification">
                 <option>None</option>
                 <option>10 minutes before</option>
                 <option>30 minutes before</option>
