added importance input and link support with embed players for twitch and youtube.

--- a/newTaskWindow.html
+++ b/newTaskWindow.html
@@ -44,7 +44,11 @@
                 <option>One hour before</option>
                 <option>One day before</option>
             </select>
-        </div>   
+        </div>
+        <div class="__important-container abs pointer">
+            <h3>Important: </h3>
+            <div class="__checkbox rel border-grey-05 br-50 transi-03"></div>   
+        </div>
         <div class="__confirm-btn abs hz-align-margins vt-align-flex hz-align-flex border-grey-05 pointer">Confirm</div>
     </div>
     <div class="time-input-container rel">
