added next task timer.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -8,8 +8,8 @@
     <div class="header of-hidden no-padd vt-align-flex rel border-grey-1">
       <div class="__mainTitle wp-pre h-fit fs-3 upper fw-1 w-fit">Your Week</div>
       <div class="__next-task abs border-grey-05 pointer">
-        <div class="__task-title h-100 vt-align-flex fs-175 of-y-hidden ws-pre">Take out the trash.</div>
-        <div class="__timer vt-align-flex hz-align-flex fs-2">03:34:23</div>
+        <div class="__task-title h-100 vt-align-flex fs-175 of-y-hidden ws-pre">No Task Yet.</div>
+        <div class="__timer vt-align-flex hz-align-flex fs-2">N/A</div>
       </div>
     </div>
     <div class="navigation-bar border-grey-1 hz-align-text rel no-padd">
