fixed next task element and made notif message clearer.

--- a/newTaskWindow.html
+++ b/newTaskWindow.html
@@ -15,7 +15,10 @@
         </div>
         <div class="__desc-container col-1-of-1">
             <h3>Event Description : </h3>
-            <textarea class="__desc" placeholder="Description" rows="5"></textarea>
+            <textarea class="__desc" placeholder="Description" rows="5">
+                
+            </textarea>
+            <div class="__add-image abs"><img src="assets/addImage.png" alt="Add an Image"></div>
         </div>
         <div class="__start-container col-1-of-2 hz-align-text">
             <h3>Start Time : </h3>
