added image support in description and started adding repeat feature.

--- a/newTaskWindow.html
+++ b/newTaskWindow.html
@@ -15,10 +15,7 @@
         </div>
         <div class="__desc-container col-1-of-1">
             <h3>Event Description : </h3>
-            <textarea class="__desc" placeholder="Description" rows="5">
-                
-            </textarea>
-            <div class="__add-image abs"><img src="assets/addImage.png" alt="Add an Image"></div>
+            <textarea class="__desc" placeholder="Description" rows="5"></textarea>
         </div>
         <div class="__start-container col-1-of-2 hz-align-text">
             <h3>Start Time : </h3>
