added structure for the settings in the html.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -39,6 +39,32 @@
           ➤
         </div>
       </div>
+      <div class="__settings-btn abs">
+        <img src="assets/setting-icon.svg" class="abs" alt="Settings">
+      </div>
+      <div class="__settings abs">
+        <p class="__disclaimer">
+          To see the notifications, Windows 10 requires for the app to be in the start menu !
+        </p>
+        <div class="__launch-on-start pointer">
+          <div class="__check-box"></div>
+          <div class="__label">Launch on Computer Startup</div>
+        </div>
+        <div class="__min-close pointer">
+          <div class="__check-box"></div>
+          <div class="__label">Minimize when closed</div>
+        </div>
+        <div class="__darkmode pointer">
+          <div class="__check-box"></div>
+          <div class="__label">Dark mode</div>
+        </div>
+        <div class="__notifications pointer">
+          <div class="__check-box"></div>
+          <div class="__label">Allow notifications</div>
+        </div>
+        <a class=".__bug-report">Report a Bug</a>
+        <p class='__info'>This app was made by Hugo AOYAGI with the aim to learn programming, You should probably not use it as there are plenty of other better apps. I published it so it feels more official y'know..</p>
+      </div>
       </div>
     </div>
     <div class="tasks-box rel">
