--- a/mainWindow.html
+++ b/mainWindow.html
@@ -39,31 +39,31 @@
           ➤
         </div>
       </div>
-      <div class="__settings-btn abs">
+      <div class="__settings-btn abs pointer">
         <img src="assets/setting-icon.svg" class="abs" alt="Settings">
       </div>
-      <div class="__settings abs">
-        <p class="__disclaimer">
+      <div class="__settings abs border-grey-05">
+        <h3 class="__title upper">Settings</h3>
+        <p class="__disclaimer border-grey-05">
           To see the notifications, Windows 10 requires for the app to be in the start menu !
         </p>
-        <div class="__launch-on-start pointer">
+        <div class="__launch-on-start pointer __input">
           <div class="__check-box"></div>
           <div class="__label">Launch on Computer Startup</div>
         </div>
-        <div class="__min-close pointer">
+        <div class="__min-close pointer __input">
           <div class="__check-box"></div>
           <div class="__label">Minimize when closed</div>
         </div>
-        <div class="__darkmode pointer">
+        <div class="__darkmode pointer __input">
           <div class="__check-box"></div>
           <div class="__label">Dark mode</div>
         </div>
-        <div class="__notifications pointer">
+        <div class="__notifications pointer __input">
           <div class="__check-box"></div>
           <div class="__label">Allow notifications</div>
         </div>
-        <a class=".__bug-report">Report a Bug</a>
-        <p class='__info'>This app was made by Hugo AOYAGI with the aim to learn programming, You should probably not use it as there are plenty of other better apps. I published it so it feels more official y'know..</p>
+        <a class="__bug-report" href="https://github.com/Hugo-AOYAGI/ToDoApp/issues"><img src="assets/github-icon.png" alt="*GitHub*"><span>Report a bug</span></a>
       </div>
       </div>
     </div>
