fixed some transition problems on startup and some text in html.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -6,12 +6,11 @@
   </head>
   <body>
     <div class="header of-hidden no-padd vt-align-flex rel border-grey-1">
-      <!-- <div class="__mainTitle wp-pre h-fit fs-25 upper fw-1 w-fit">Your Week</div> -->
-      <div class="__mainTitle wp-pre h-fit fs-25 upper fw-1 w-fit">Calendar</div>
+      <div class="__mainTitle wp-pre h-fit fs-25 upper fw-1 w-fit">Your Week</div>
       <div class="__quit-calendar-btn vt-align-flex pointer abs">⤾</div>
       <div class="__next-task abs border-grey-05">
-        <div class="__task-title h-100 vt-align-flex fs-175 of-y-hidden ws-pre">No Task Yet.</div>
-        <div class="__timer vt-align-flex hz-align-flex fs-2">N/A</div>
+        <div class="__task-title h-100 vt-align-flex fs-175 of-y-hidden ws-pre">No task yet !</div>
+        <div class="__timer vt-align-flex hz-align-flex fs-2">None</div>
       </div>
     </div>
     <div class="navigation-bar border-grey-1 hz-align-text rel no-padd">
@@ -19,10 +18,10 @@
         <div class="__day-name">Monday</div>
         <div class="__day-date">08/07</div>
       </div>
-      <div class="__add-task-btn border-grey-05 br-50 hz-align-margins pointer transi-03">
-        <div class="__icon vt-align-flex hz-align-flex transi-03">+</div>
+      <div class="__add-task-btn border-grey-05 br-50 hz-align-margins pointer">
+        <div class="__icon vt-align-flex hz-align-flex">+</div>
       </div>
-      <div class="__calendar-btn border-grey-05 vt-align-flex hz-align-flex hz-align-margins fs-25 pointer transi-03">Calendar</div>
+      <div class="__calendar-btn border-grey-05 vt-align-flex hz-align-flex hz-align-margins fs-25 pointer">Calendar</div>
       <div class="__completed-tasks pointer">
         <div class="__check-box"></div>
         <div class="__label">See completed tasks</div>
