--- a/mainWindow.html
+++ b/mainWindow.html
@@ -22,11 +22,11 @@
         <div class="__icon vt-align-flex hz-align-flex">+</div>
       </div>
       <div class="__calendar-btn border-grey-05 vt-align-flex hz-align-flex hz-align-margins fs-25 pointer">Calendar</div>
-      <div class="__completed-tasks pointer">
+      <div class="__seeCompletedTasks pointer">
         <div class="__check-box"></div>
         <div class="__label">See completed tasks</div>
       </div>
-      <div class="__important-tasks pointer">
+      <div class="__seeImportantOnly pointer">
         <div class="__check-box"></div>
         <div class="__label">See important tasks only</div>
       </div>
@@ -46,19 +46,19 @@
         <p class="__disclaimer border-grey-05">
           To see the notifications, Windows 10 requires for the app to be in the start menu !
         </p>
-        <div class="__launch-on-start pointer __input">
+        <div class="__launchOnStartup pointer __input">
           <div class="__check-box"></div>
           <div class="__label">Launch on Computer Startup</div>
         </div>
-        <div class="__min-close pointer __input">
+        <div class="__minimizeWhenClosed pointer __input">
           <div class="__check-box"></div>
           <div class="__label">Minimize when closed</div>
         </div>
-        <div class="__darkmode pointer __input">
+        <div class="__darkModeEnabled pointer __input">
           <div class="__check-box"></div>
           <div class="__label">Dark mode</div>
         </div>
-        <div class="__notifications pointer __input">
+        <div class="__notificationsEnabled pointer __input">
           <div class="__check-box"></div>
           <div class="__label">Allow notifications</div>
         </div>
