changed logo, added css transitions and fixed a few bugs.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -137,9 +137,13 @@
         </div>
       </div>
       <div class="__footer border-grey-1">
-        <div class="__prevbutton __btn hz-align-flex vt-align-flex pointer">➣</div>
+        <div class="__prevbutton __btn hz-align-flex vt-align-flex pointer">
+          <span class="__icon">➣</span>
+        </div>
         <div class="__month-title hz-align-flex vt-align-flex">July <b>2019</b></div>
-        <div class="__nextbutton __btn hz-align-flex vt-align-flex pointer">➣</div>  
+        <div class="__nextbutton __btn hz-align-flex vt-align-flex pointer">
+          <span class="__icon">➣</span>
+        </div>  
       </div>
     </div>
   </body>
