fixed a few bugs and added the tutorial task.

--- a/mainWindow.html
+++ b/mainWindow.html
@@ -55,6 +55,7 @@
           <div class="__label">Allow notifications</div>
         </div>
         <a class="__bug-report" href="https://github.com/Hugo-AOYAGI/ToDoApp/issues"><img src="assets/github-icon.png" alt="*GitHub*"><span>Report a bug</span></a>
+        <a href="https://icons8.com/">Icons from Icons8</a>
       </div>
       </div>
     </div>
